[metadata]
name = watchtower
version = 0.1.0
description = CMF delta estimation and search utilities
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# Discover packages in project root
packages = find:

# Include package data (none currently)
include_package_data = True



# Python version compatibility
python_requires = >=3.10

# No top-level py_modules; all code is packaged under 'src/watchtower'

[options.packages.find]
where = .
exclude =
    tests
    tests.*
    docs
    docs.*

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
extend-ignore = E203,W503

[isort]
profile = black
combine_as_imports = true
force_sort_within_sections = true

[mypy]
python_version = 3.10
ignore_missing_imports = true
strict_optional = false
